<resources>
    <string name="app_name">OSLearn</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="user">Username</string>
    <string name="button">Button</string>
    <string name="login_to_yo">Login to your account</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_">Don\'t have an account? signup</string>
    <string name="already">Already have an account? login</string>
</resources>