<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page">

    <ImageView
        android:layout_width="261dp"
        android:layout_height="249dp"
        android:src="@drawable/login"
        android:viewportWidth="261"
        android:viewportHeight="249"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/create"
        android:layout_width="342dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/create_account"
        android:textAppearance="@style/login_to_yo"
        android:layout_marginStart="26dp"
        android:layout_marginTop="270dp"
        tools:ignore="MissingConstraints,TextSizeCheck"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textAppearance="@style/email"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="42dp"
        android:layout_below="@+id/create" />

    <EditText
        android:id="@+id/createTextEmailAddress"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck"
        android:layout_marginLeft="42dp"
        android:layout_below="@+id/email" />

    <TextView
        android:id="@+id/username"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:text="@string/user"
        android:textAppearance="@style/email"
        tools:ignore="MissingConstraints,TextSizeCheck"
        android:layout_marginLeft="42dp"
        android:layout_below="@id/createTextEmailAddress" />

    <EditText
        android:id="@+id/createTextUsername"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck"
        android:layout_marginLeft="42dp"
        android:layout_below="@+id/username" />

    <TextView
        android:id="@+id/password"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textAppearance="@style/email"
        tools:ignore="MissingConstraints,TextSizeCheck"
        android:layout_marginLeft="42dp"
        android:layout_below="@id/createTextUsername" />

    <EditText
        android:id="@+id/createTextPassword"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck"
        android:layout_marginLeft="42dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/password"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:text="@string/create_account"
        android:textSize="14sp"
        tools:ignore="MissingConstraints,TextSizeCheck,DuplicateSpeakableTextCheck,VisualLintBounds"
        android:layout_marginLeft="107dp"
        android:layout_below="@id/createTextPassword" />

    <TextView
        android:id="@+id/Login_Link"
        android:layout_width="190dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/already"
        android:textAppearance="@style/don_t_have_"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintBounds"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="711dp" />


</RelativeLayout>